{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 4,
  "lineage": "5694f0c1-e237-92a7-be44-fa35906bb5d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246812814685:security-group/sg-04095c410d398395c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04095c410d398395c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "246812814685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f2e55b2df9f15dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246812814685:security-group/sg-06b08dedf965099d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b08dedf965099d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_80",
            "name_prefix": "",
            "owner_id": "246812814685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f2e55b2df9f15dc"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}